@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-03-12T01:25:34Z",
-  "count" : 8,
+  "timestamp" : "2025-03-12T12:37:54Z",
+  "count" : 7,
   "count_minmax" : [ 1, 9 ],
-  "count_decinc" : [ -1, +9 ],
-  "uniques" : 7,
+  "count_decinc" : [ -2, +9 ],
+  "uniques" : 6,
   "uniques_minmax" : [ 1, 8 ],
-  "uniques_decinc" : [ -1, +8 ]
+  "uniques_decinc" : [ -2, +8 ]
 }
