@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-03-12T01:25:34Z",
+  "timestamp" : "2025-03-12T12:37:54Z",
   "count_outdated" : 4664,
   "uniques_outdated" : 2403,
-  "count" : 4726,
-  "uniques" : 2454,
+  "count" : 4733,
+  "uniques" : 2460,
   "clones" : [
     {
       "timestamp": "2025-02-26T00:00:00Z",
-      "count": 8,
+      "count": 7,
       "count_minmax": [ 1, 9 ],
-      "count_decinc": [ 1, 9 ],
-      "uniques": 7,
+      "count_decinc": [ 2, 9 ],
+      "uniques": 6,
       "uniques_minmax": [ 1, 8 ],
-      "uniques_decinc": [ 1, 8 ]
+      "uniques_decinc": [ 2, 8 ]
     },
     {
       "timestamp": "2025-02-27T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 3,
       "uniques_minmax": [ 2, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2025-03-12T00:00:00Z",
+      "count": 7,
+      "count_minmax": [ 7, 7 ],
+      "count_decinc": [ 0, 7 ],
+      "uniques": 6,
+      "uniques_minmax": [ 6, 6 ],
+      "uniques_decinc": [ 0, 6 ]
     }
   ]
 }
