@@ -1,11 +1,11 @@
 {
-  "count": 61,
-  "uniques": 31,
+  "count": 67,
+  "uniques": 35,
   "clones": [
     {
       "timestamp": "2025-02-26T00:00:00Z",
-      "count": 8,
-      "uniques": 7
+      "count": 7,
+      "uniques": 6
     },
     {
       "timestamp": "2025-02-27T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2025-03-11T00:00:00Z",
       "count": 4,
       "uniques": 3
+    },
+    {
+      "timestamp": "2025-03-12T00:00:00Z",
+      "count": 7,
+      "uniques": 6
     }
   ]
 }
